# docs/swagger.json
@@ -84,134 +84,6 @@
                 }
             }
         },
-        "/book": {
-            "get": {
-                "description": "Get all Books on the system",
-                "tags": [
-                    "book"
-                ],
-                "summary": "Get all Books",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "page",
-                        "name": "page",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/book.PaginationResultBook"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/book.MessageResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/book.MessageResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "book"
-                ],
-                "summary": "Create New Book",
-                "parameters": [
-                    {
-                        "description": "body data",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/book.NewBookRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/hacktiv_final-project_domain_book.Book"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/book.MessageResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/book.MessageResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/book/{book_id}": {
-            "get": {
-                "tags": [
-                    "book"
-                ],
-                "summary": "Get books by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id of book",
-                        "name": "book_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/hacktiv_final-project_domain_book.Book"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/book.MessageResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/book.MessageResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/photo": {
             "get": {
                 "security": [
@@ -498,93 +370,11 @@
                 }
             }
         },
-        "book.MessageResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "book.NewBookRequest": {
-            "type": "object",
-            "required": [
-                "description",
-                "title"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "example": "Something"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "Book"
-                }
-            }
-        },
-        "book.PaginationResultBook": {
-            "type": "object",
-            "properties": {
-                "current": {
-                    "type": "integer"
-                },
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/hacktiv_final-project_domain_book.Book"
-                    }
-                },
-                "limit": {
-                    "type": "integer"
-                },
-                "nextCursor": {
-                    "type": "integer"
-                },
-                "numPages": {
-                    "type": "integer"
-                },
-                "prevCursor": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
         "controllers.MessageResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "hacktiv_final-project_domain_book.Book": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string",
-                    "example": "book description"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "book title"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
